[MIG] web_responsive: Migrate to v10 * Bump version * Change all openerp to odoo * Fix qunit suite injection * Remove jQuery require * Change to new selectors:   * `oe_leftbar` to `o_sub_menu`   * `oe_logo` to `o_sub_menu_logo`   * `oe_footer` to `o_sub_menu_footer`   * `oe_secondary_menus_container` to `o_sub_menu_content` * Add style to hide oe_footer instead of remove to not break `support_branding` * Add note in ReadMe explaining override of `support_branding` * Set top margin of app drawer title to 0 to fit v10 proportions * Fix notification badge positioning * Add o_web_client class to body to fix overlaps * Scroll control panel with page * Change navbar z-index to not be overlapped by buttons * Raise z-index on header to raise over buttons * Handle layered notifications via z-index * Remove `#` from navigation links HREF to prevent history littering

--- a/web_responsive/static/src/less/app_drawer.less
+++ b/web_responsive/static/src/less/app_drawer.less
@@ -47,11 +47,10 @@
 
     .app-drawer-title {
         float: none;
-        font-weight: bold; // Bold titles for apps in the app-drawer
     }
 
     .app-drawer-panel-title {
-        margin-top: 5px;
+        margin-top: 4px;
     }
 
     .app-drawer-icon-app {
